Add service info update
