# docs/swagger.json
@@ -20,12 +20,12 @@
                 "summary": "Create a service",
                 "parameters": [
                     {
-                        "description": "Create service request body",
-                        "name": "createServiceRequest",
+                        "description": "Service request body",
+                        "name": "serviceRequest",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.CreateServiceRequest"
+                            "$ref": "#/definitions/model.ServiceRequest"
                         }
                     }
                 ],
@@ -72,6 +72,37 @@
                     }
                 }
             },
+            "post": {
+                "summary": "Update a service",
+                "parameters": [
+                    {
+                        "description": "Service request body",
+                        "name": "serviceRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.ServiceRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            },
             "delete": {
                 "produces": [
                     "application/json"
@@ -114,7 +145,7 @@
         }
     },
     "definitions": {
-        "model.CreateServiceRequest": {
+        "model.ServiceRequest": {
             "type": "object",
             "required": [
                 "checkIntervalSeconds",
